# kiwi-mcp

./: .env.example  .gitignore  AGENTS.md  CODE_SMELL_ANALYSIS.md  CREATION_FLOW_ANALYSIS.md  DELIVERABLES.txt  EXECUTOR_REFACTORING_CLEANUP.md  FIX_DIRECTIVE_XML_REPORT.md  FLEXIBLE_VECTOR_CONFIG_DESIGN.md  HYBRID_RAG_DESIGN.md  LANGUAGE_AWARE_SIGNATURES.md  LICENSE  LOCAL_CHAIN_RESOLUTION.md  Makefile  PATH_STRUCTURE_AND_CATEGORIZATION.md  PHASE1_SUMMARY.md  PHASE_3_REFACTORING_SUMMARY.md  PHASE_8_11_IMPLEMENTATION.md  PRIMITIVE_EXECUTORS_SUMMARY.md  README.md  SEARCH_IMPLEMENTATION_ANALYSIS.md  STRATEGY_SUMMARY.md  SYNC_DIRECTIVES_REPORT.md  SYNC_EXECUTION_REPORT.txt  SYNC_OPERATION_SUMMARY.txt  TOOL_CHAIN_VALIDATION_DESIGN.md  pyproject.toml  pytest.ini  session-ses_412c.md  session-ses_4318.md  temp.xml  test_centralized_verification.py  test_execution.py  test_harness_demo.txt  test_local_chain.py  test_summary.py
rye-lilux/: FIX_TESTS_PROMPT.md  LILUX_DOCS_COMPLETE.md  PHASE5_SUMMARY.md  pyproject.toml  test_handlers.py  test_simple.py
rye-lilux/docs/: ARCHITECTURE.md  COMPLETE_DATA_DRIVEN_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LILUX_DOCS_ROADMAP.md  LLM_DOCUMENTATION_INSTRUCTIONS.md  LLM_INSTRUCTIONS_LILUX.md  LLM_INSTRUCTIONS_RYE.md  RYE_DOCS_ROADMAP.md  SOURCE_LINKING.md  TELEMETRY_DESIGN.md  UNIVERSAL_EXECUTOR_FIX_SUMMARY.md  index.md
rye-lilux/docs/lilux/: principles.md
rye-lilux/docs/lilux/config/: overview.md
rye-lilux/docs/lilux/handlers/: overview.md
rye-lilux/docs/lilux/package/: structure.md
rye-lilux/docs/lilux/primitives/: chain-validator.md  http-client.md  integrity.md  lockfile.md  overview.md  subprocess.md
rye-lilux/docs/lilux/runtime-services/: auth-store.md  env-resolver.md  lockfile-store.md
rye-lilux/docs/lilux/schemas/: overview.md  tool-schema.md
rye-lilux/docs/lilux/storage/: overview.md
rye-lilux/docs/lilux/tools/: mcp-tools.md  overview.md
rye-lilux/docs/lilux/utils/: overview.md
rye-lilux/docs/rye/: mcp-server.md  principles.md
rye-lilux/docs/rye/bundle/: structure.md
rye-lilux/docs/rye/categories/: capabilities.md  examples.md  extractors.md  llm.md  mcp.md  overview.md  parsers.md  primitives.md  protocol.md  python.md  registry.md  runtimes.md  rye.md  sinks.md  telemetry.md  threads.md  utility.md
rye-lilux/docs/rye/content-handlers/: overview.md
rye-lilux/docs/rye/mcp-tools/: execute.md  help.md  load.md  overview.md  search.md  sign.md
rye-lilux/docs/rye/package/: structure.md
rye-lilux/docs/rye/universal-executor/: overview.md  routing.md
rye-lilux/lilux/: __init__.py  pyproject.toml  server.py
rye-lilux/lilux/config/: __init__.py  search_config.py  vector_config.py
rye-lilux/lilux/handlers/: handler_registry.py
rye-lilux/lilux/handlers/directive/: __init__.py  handler.py
rye-lilux/lilux/handlers/knowledge/: __init__.py  handler.py
rye-lilux/lilux/handlers/tool/: __init__.py  handler.py
rye-lilux/lilux/primitives/: __init__.py  chain_validator.py  errors.py  executor.py  integrity.py  integrity_verifier.py
rye-lilux/lilux/runtime/: auth.py  env_resolver.py  lockfile_store.py
rye-lilux/lilux/schemas/: __init__.py  tool_schema.py
rye-lilux/lilux/storage/vector/: api_embeddings.py  base.py  embedding_registry.py  hybrid.py  (+3 more)
rye-lilux/lilux/tools/: __init__.py  execute.py  help.py  load.py  search.py  sign.py
rye-lilux/lilux/utils/: __init__.py  env_loader.py  env_manager.py  extensions.py  file_search.py  files.py  logger.py  output_manager.py  parsers.py  path_service.py  paths.py  resolvers.py  signature_formats.py  validators.py
rye-lilux/rye/: __init__.py  pyproject.toml
rye-lilux/rye/rye/: __init__.py  server.py
rye-lilux/tests/: __init__.py  conftest.py  test_lilux_tools.py
rye-lilux/tests/handlers/: test_directive_search.py
rye-lilux/tests/harness/: __init__.py  test_capability_tokens.py  test_expression_evaluator.py  test_integration.py  test_safety_harness.py
rye-lilux/tests/integration/: __init__.py  test_thread_tools.py  test_validation_integration.py
rye-lilux/tests/primitives/: test_executor_auth_integration.py  test_executor_lockfile.py  test_http_client.py  test_http_streaming.py  test_performance.py  test_stress.py  test_subprocess.py  test_tool_chain_errors.py
rye-lilux/tests/unit/: test_handlers.py  test_metadata_manager.py  test_parsers.py  test_protection.py  test_schema_validator.py  test_tool_validator.py  test_validators.py  test_xml_parsing_issues.py
rye-lilux/tests/utils/: test_validators.py
(+350 files in other folders)
